Cover some styling issues that appear on mobile

--- a/src/app/components/styles.module.css
+++ b/src/app/components/styles.module.css
@@ -41,6 +41,7 @@
   padding: 8px;
   padding-left: 10px;
   width: 100%;
+  border-radius: 0;
 }
 
 .inputElement:focus {
@@ -107,7 +108,6 @@
 .dropdownContainer {
   width: 100%;
   height: 100%;
-  background-color: aliceblue;
 }
 
 .dropdown {
@@ -117,7 +117,9 @@
   font-size: inherit;
   padding-left: 5px;
   background-color: var(--background);
+  color: var(--foreground);
   border: 1px dashed var(--foreground);
+  border-radius: 0;
 }
 
 .dropdown:focus {
